Creación pagina factura

--- a/jaxistore/web/static/css/style.css
+++ b/jaxistore/web/static/css/style.css
@@ -10141,3 +10141,95 @@ h6,
     border-right: none !important;
   }
 }
+
+body {
+  font-family: 'Poppins', sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.containerfactura-fluid {
+  background-color: #f8f9fa;
+}
+
+.containerfactura {
+  background-color: #ffffff;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.header {
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.header h1 {
+  margin: 0;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.section {
+  width: 48%;
+}
+
+.section h3 {
+  margin: 0 0 10px 0;
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.section p {
+  margin: 5px 0;
+  font-size: 14px;
+}
+
+.bold {
+  font-weight: 600;
+}
+
+.form-control {
+  width: 100%;
+  margin: 5px 0;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.order-details {
+  width: 100%;
+  border-collapse: collapse;
+  margin-bottom: 20px;
+}
+
+.order-details th,
+.order-details td {
+  border: 1px solid black;
+  padding: 10px;
+  text-align: center;
+  font-size: 14px;
+}
+
+.totals div {
+  margin: 10px 0;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 40px;
+}
+
+.signature {
+  border-top: 1px solid black;
+  width: 200px;
+  text-align: center;
+  margin-top: 20px;
+}
