--- a/jaxistore/web/templates/base.html
+++ b/jaxistore/web/templates/base.html
@@ -78,9 +78,9 @@
     <!-- Navbar End -->
 
 
-    {% block contenido_Index %}
+    {% block contenido %}
     
-    {% endblock contenido_Index %}
+    {% endblock contenido %}
 
 
     <!-- Footer Start -->
