--- a/jaxistore/web/templates/base_login.html
+++ b/jaxistore/web/templates/base_login.html
@@ -30,7 +30,7 @@
 
 <body>
     <!-- Topbar Start -->
-    <div class="container-fluid bg-primary py-3 d-none d-md-block">
+<div class="container-fluid bg-primary py-3 d-none d-md-block">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-lg-left mb-2 mb-lg-0">
@@ -109,7 +109,7 @@
                     </div>
                 </div>
                 <div class="col-12">
-                    <p class="m-0">&copy; <a href="#">Xime</a>. Todos los derechos reservados a Ximena Valderrama</a>
+                    <p class="m-0">&copy; <a href="#">Xime</a>. Todos los derechos reservados a Ximena Valderrama Soto</a>
                     </p>
                 </div>
             </div>
