--- a/jaxistore/web/templates/index.html
+++ b/jaxistore/web/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block  contenido_Index %}
+{% block  contenido %}
 
 <div class="container-fluid py-5">
     <div class="container py-5">
@@ -58,6 +58,4 @@
     </div>
 </div>
 
-
-
-{% endblock contenido_Index  %}
+{% endblock contenido  %}
