--- a/jaxistore/web/templates/base.html
+++ b/jaxistore/web/templates/base.html
@@ -69,7 +69,7 @@
                         <h1 class="m-0 display-4 text-primary"><span class="text-secondary">JAXI</span>STORE</h1>
                     </a>
                     <div class="navbar-nav mr-auto py-0">
-                        <a href="contact.html" class="nav-item nav-link">Cerrar Sesión</a>
+                        <a href="{% url 'cerrar_sesion' %}" class="nav-item nav-link">Cerrar Sesión</a>
                     </div>
                 </div>
             </nav>
