--- a/jaxistore/web/templates/index.html
+++ b/jaxistore/web/templates/index.html
@@ -50,7 +50,7 @@
                         <!-- Puedes duplicar esta estructura para más facturas -->
                     </div>
                     <div class="form-row d-flex justify-content-center mt-4">
-                        <a href="otra_pagina.html" class="btn btn-primary btn-block py-3 px-5 col-4 control-group">Agregar factura</a>
+                        <a href="/factura/" class="btn btn-primary btn-block py-3 px-5 col-4 control-group">Agregar factura</a>
                     </div>
                 </div>
             </div>
