--- a/jaxistore/web/templates/base.html
+++ b/jaxistore/web/templates/base.html
@@ -60,12 +60,12 @@
                 </a>
                 <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </button>   
                 <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                     <div class="navbar-nav ml-auto py-0">
-                        <a href="index.html" class="nav-item nav-link active">Inicio</a>
+                        <a href="/index/" class="nav-item nav-link active">Inicio</a>
                     </div>
-                    <a href="index.html" class="navbar-brand mx-5 d-none d-lg-block">
+                    <a href="/index/" class="navbar-brand mx-5 d-none d-lg-block">
                         <h1 class="m-0 display-4 text-primary"><span class="text-secondary">JAXI</span>STORE</h1>
                     </a>
                     <div class="navbar-nav mr-auto py-0">
