--- a/jaxistore/web/templates/factura.html
+++ b/jaxistore/web/templates/factura.html
@@ -16,7 +16,7 @@
                         <div class="row text-center mb-5">   
                             <div class="col-lg-4"> 
                                 <label>Nº de orden: </label>
-                                <input type="text" class="form-control bg-white" id="orden" readonly />
+                                <input type="text" name="orden" class="form-control bg-white" id="orden" readonly />
                             </div>
                         </div>
 
@@ -102,7 +102,7 @@
                                     <td><input type="text" name="producto[]" class="form-control" required /></td>
                                     <td><input type="number" name="precio[]" class="form-control precio" required /></td>
                                     <td><input type="number" name="cantidad[]" class="form-control cantidad" required /></td>
-                                    <td><input type="number" name="total[]" class="form-control bg-white total" readonly /></td>
+                                    <td><input type="text" name="total[]" class="form-control bg-white total" readonly /></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -113,15 +113,15 @@
                         <div class="totals d-flex justify-content-end flex-column align-items-end">
                             <div class="col-lg-4 d-flex justify-content-end">
                                 <label>Total pedido: </label>
-                                <input type="number" name="total_pedido" class="form-control bg-white" id="total_pedido" readonly />
+                                <input type="text" name="total_pedido" class="form-control bg-white" id="total_pedido" readonly />
                             </div>
                             <div class="col-lg-4 d-flex justify-content-end"> 
                                 <label>IVA 19%: </label>
-                                <input type="number" class="form-control bg-white" id="iva" readonly />
+                                <input type="text" name="iva" class="form-control bg-white" id="iva" readonly />
                             </div>
                             <div class="col-lg-4 d-flex justify-content-end">
                                 <label>Total a pagar: </label>
-                                <input type="number" class="form-control bg-white" id="total_pagar" readonly />
+                                <input type="text" name="total_pagar" class="form-control bg-white" id="total_pagar" readonly />
                             </div>
                         </div>
 
@@ -142,20 +142,48 @@
                         </div>
                     </div>
                 </div>
+                <div class="form-row d-flex justify-content-center">
+                    <button class="btn btn-primary btn-block py-3 px-5 col-8 control-group" type="submit">Aceptar</button>
+                </div>
             </form>
-        </div>
-        <div class="form-row d-flex justify-content-end mt-8 mr-5">
-            <a href="otra_pagina.html" class="btn btn-primary btn-block py-3 px-5 col-3 control-group">Aceptar</a>
         </div>
     </div>
 </div>
 
 <script>
+    function formatCurrency(value) {
+        return '$' + value.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
+    }
+
     function calculateTotal(row) {
         var precio = parseFloat(row.querySelector('.precio').value) || 0;
         var cantidad = parseFloat(row.querySelector('.cantidad').value) || 0;
         var total = row.querySelector('.total');
-        total.value = Math.round(precio * cantidad);
+        var totalValue = Math.round(precio * cantidad);
+        total.value = formatCurrency(totalValue);
+        calculateSubtotal();
+    }
+
+    function calculateSubtotal() {
+        var rows = document.querySelectorAll('#productos-table tbody tr');
+        var subtotal = 0;
+        rows.forEach(function(row) {
+            var total = parseFloat(row.querySelector('.total').value.replace(/[^0-9.-]+/g,"")) || 0;
+            subtotal += total;
+        });
+        document.getElementById('total_pedido').value = formatCurrency(subtotal);
+        calculateIVA(subtotal);
+    }
+
+    function calculateIVA(subtotal) {
+        var iva = Math.round(subtotal * 0.19);
+        document.getElementById('iva').value = formatCurrency(iva);
+        calculateTotalPagar(subtotal, iva);
+    }
+
+    function calculateTotalPagar(subtotal, iva) {
+        var totalPagar = subtotal + iva;
+        document.getElementById('total_pagar').value = formatCurrency(totalPagar);
     }
 
     document.querySelectorAll('.precio, .cantidad').forEach(function(element) {
